# codex-ultracode

./: .gitignore  CHANGELOG.md  PROJECT_SPEC.md  README.md  RELEASE_REPORT.md  VERIFICATION_EVIDENCE.json  codex_conductor_project_spec.md  pyproject.toml
.codex/: config.toml
benchmark-suites/: agent-memory-template.json  agent-profile-template.json  agent-team-interruption-template.json  agent-team-merge-ledger-template.json  agent-team-operator-chat-template.json  agent-team-operator-inbox-template.json  agent-team-plan-approval-template.json  agent-team-plan-approval-v1-template.json  agent-team-plan-approval-v2-template.json  agent-team-plan-review-template.json  agent-team-plan-template.json  agent-team-state-template.json  agent-team-state-v1-template.json  agent-team-state-v2-template.json  agent-team-state-v4-template.json  agent-team-state-v5-template.json  agent-team-transcript-template.json  authenticated-restricted-agent-profile-template.json  auto-efficiency-tasks.json  auto-orchestration-native-receipt-template.json  auto-orchestration-receipt-template.json  auto-topology-retry-canary.json  auto-topology-tasks.json  background-model-goal-template.json  background-routine-supervisor-template.json  benchmark-quality-evidence-template.json  benchmark-score-input-template.json  claude-map-synthesis-smoke.js  claude-multistage-handoff-smoke.js  claude-parallel-phase-smoke.js  claude-provider-evidence-template.json  claude-provider-evidence-v1-template.json  claude-provider-evidence-v2-template.json  claude-saved-workflow-smoke.js  claude-structured-map-smoke.js  (+28 more)
(+346 files in other folders)
