[project]
name = "codex-conductor"
version = "0.174.0"
description = "Dependency-free bounded workflow runtime and optional Codex compatibility tools"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = []

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.coverage.run]
branch = true
source = ["conductor_runtime"]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = true

[tool.mypy]
python_version = "3.12"
files = ["conductor_runtime"]
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
pretty = true
